auth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: retail-store
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
