auth/base/custom-authorizer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: custom-authorizer
  namespace: retail-store
spec:
  selector:
    matchLabels:
      auth: custom
  action: CUSTOM
  provider:
    name: "custom-authorizer"
  rules:
    - to:
        - operation:
            paths: ["*"]
